--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,5 +77,5 @@ for:
         auth_token:
           secure: CG/bUw6LmV4j4bsJnPQrmt8Fa5/0rKLnattAUz6bbY3nnBJREgB/shaJO0xm8wvnM62GvnJVi+mM/ErL/pWUcbl0U10XudtYwn+EFEqVSXc=
         channel: '#notificaciones'
-        template: "Failed Release {{buildVersion}} committed by {{commitAuthor}}({{commitAuthorEmail}})" 
+        template: "Failed Build {{buildVersion}} committed by {{commitAuthor}}({{commitAuthorEmail}})" 
 
