--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,10 @@ build:
   verbosity: minimal
 pull_requests:
   do_not_increment_build_number: true
-  
+branches:
+  only:
+    - releases
+    - master
 for:
 -
   branches:
