--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -1,237 +1,69 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="Entity.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticObjectEntity.cpp">
-      <Filter>Entities\Static Entities</Filter>
-    </ClCompile>
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="Console.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="FileSystem.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="Fonts.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleAudio.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleEntitySystem.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleGUI.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleRender.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleInput.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleWindow.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleTextures.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="Color.cpp">
-      <Filter>Helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Log.cpp">
-      <Filter>Helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Timer.cpp">
-      <Filter>Helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="PugiXml\src\pugixml.cpp">
-      <Filter>Helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="GUIElem.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="InputBox.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="Label.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="EnemyEntity.cpp">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerEntity.cpp">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticEntity.cpp">
-      <Filter>Entities\Static Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Thrall.cpp">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Button.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="Slider.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleMapGenerator.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="BossEntity.h">
+    <ClCompile Include="BossEntity.cpp" />
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="ChestEntity.cpp" />
+    <ClCompile Include="ConsumableEntity.cpp" />
+    <ClCompile Include="DynamicEntity.cpp" />
+    <ClCompile Include="EnemyEntity.cpp" />
+    <ClCompile Include="Enemy_Footman.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Console.cpp" />
-    <ClCompile Include="InputBox.cpp" />
-    <ClCompile Include="Label.cpp" />
-    <ClCompile Include="GUIElem.cpp" />
-    <ClCompile Include="Application.cpp" />
     <ClCompile Include="Fonts.cpp" />
     <ClCompile Include="FileSystem.cpp" />
+    <ClCompile Include="InputBox.cpp" />
+    <ClCompile Include="Slider.cpp" />
+    <ClCompile Include="ModuleMapGenerator.cpp" />
+    <ClCompile Include="ModuleColliders.cpp" />
+    <ClCompile Include="Pathfinding.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Label.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
+    <ClCompile Include="ModuleEntitySystem.cpp" />
     <ClCompile Include="ModuleGUI.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
+    <ClCompile Include="PlayerEntity.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
-    <ClCompile Include="Enemy_Footman.cpp">
-      <Filter>Entities\Dynamic Entities\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleEntitySystem.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="DynamicEntity.cpp">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="BossEntity.cpp">
-      <Filter>Entities\Dynamic Entities\Boss</Filter>
-    </ClCompile>
-    <ClCompile Include="EnemyEntity.cpp">
-      <Filter>Entities\Dynamic Entities\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerEntity.cpp">
-      <Filter>Entities\Dynamic Entities\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="Thrall.cpp">
-      <Filter>Entities\Dynamic Entities\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="ChestEntity.cpp">
-      <Filter>Entities\Static Entities\Chest</Filter>
-    </ClCompile>
-    <ClCompile Include="ConsumableEntity.cpp">
-      <Filter>Entities\Static Entities\Consumable</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticObjectEntity.cpp">
-      <Filter>Entities\Static Entities\ObjectStatc</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticEntity.cpp">
-      <Filter>Entities\Static Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Pathfinding.cpp">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="ModuleColliders.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="StaticEntity.cpp" />
+    <ClCompile Include="StaticObjectEntity.cpp" />
+    <ClCompile Include="Thrall.cpp" />
+    <ClCompile Include="GUIElem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="EntitiesEnums.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticObjectEntity.h">
-      <Filter>Entities\Static Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Application.h" />
-    <ClInclude Include="Module.h" />
-    <ClInclude Include="Console.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="FileSystem.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="Fonts.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleAudio.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleEntitySystem.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleGUI.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleTextures.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleInput.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleWindow.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleRender.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="Animation.h">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Globals.h">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Log.h">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Defs.h">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Point.h">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="PugiXml\src\pugiconfig.hpp">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Timer.h">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="PugiXml\src\pugixml.hpp">
-      <Filter>Helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="GUIElem.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="InputBox.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="Label.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerEntity.h">
-      <Filter>Entities\Dynamic Entities</Filter>
-    <ClInclude Include="Console.h" />
-    <ClInclude Include="GUIElem.h" />
-    <ClInclude Include="InputBox.h" />
-    <ClInclude Include="Label.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="BossEntity.h" />
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="ChestEntity.h" />
+    <ClInclude Include="ConsumableEntity.h" />
+    <ClInclude Include="DynamicEntity.h" />
+    <ClInclude Include="EnemyEntity.h" />
+    <ClInclude Include="Enemy_Footman.h" />
+    <ClInclude Include="EntitiesEnums.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Console.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Fonts.h" />
     <ClInclude Include="FileSystem.h" />
+    <ClInclude Include="GUIElem.h" />
+    <ClInclude Include="InputBox.h" />
+    <ClInclude Include="Slider.h" />
+    <ClInclude Include="ModuleMapGenerator.h" />
+    <ClInclude Include="ModuleColliders.h" />
+    <ClInclude Include="Pathfinding.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="Label.h" />
     <ClInclude Include="ModuleAudio.h" />
+    <ClInclude Include="ModuleEntitySystem.h" />
     <ClInclude Include="ModuleGUI.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="Module.h" />
@@ -241,95 +73,13 @@
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleTextures.h" />
     <ClInclude Include="ModuleWindow.h" />
+    <ClInclude Include="PlayerEntity.h" />
     <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
-    <ClInclude Include="Enemy_Footman.h">
-      <Filter>Entities\Dynamic Entities\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleEntitySystem.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="DynamicEntity.h">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="BossEntity.h">
-      <Filter>Entities\Dynamic Entities\Boss</Filter>
-    </ClInclude>
-    <ClInclude Include="EnemyEntity.h">
-      <Filter>Entities\Dynamic Entities\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerEntity.h">
-      <Filter>Entities\Dynamic Entities\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="Thrall.h">
-      <Filter>Entities\Dynamic Entities\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="ChestEntity.h">
-      <Filter>Entities\Static Entities\Chest</Filter>
-    </ClInclude>
-    <ClInclude Include="ConsumableEntity.h">
-      <Filter>Entities\Static Entities\Consumable</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticObjectEntity.h">
-      <Filter>Entities\Static Entities\ObjectStatc</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticEntity.h">
-      <Filter>Entities\Static Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Thrall.h">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Button.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="Slider.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleMapGenerator.h">
-      <Filter>Modules</Filter>
-    <ClInclude Include="Pathfinding.h">
-      <Filter>Entities\Dynamic Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleColliders.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Entities">
-      <UniqueIdentifier>{590bbb91-4bf6-478e-952b-45a8fe4fe03c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Dynamic Entities">
-      <UniqueIdentifier>{0aac2902-43c3-4e80-82fc-9c25104388ad}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Static Entities">
-      <UniqueIdentifier>{1bfbf667-b19d-49f5-816c-83b78491c311}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Modules">
-      <UniqueIdentifier>{9c88460c-d101-4a7e-9d2b-3ec26ad2f3eb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Helpers">
-      <UniqueIdentifier>{ff5ba816-e607-454e-a645-491b01089192}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="GUI">
-      <UniqueIdentifier>{a7e103c0-3c40-4b83-a2dc-f9ecf17ddcbc}</UniqueIdentifier>
-    <Filter Include="Entities\Dynamic Entities\Enemies">
-      <UniqueIdentifier>{864c4ea5-3003-4f62-9dff-5aa86a22e75e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Dynamic Entities\Player">
-      <UniqueIdentifier>{56b81685-c59a-4b57-afc3-a915471f3703}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Dynamic Entities\Boss">
-      <UniqueIdentifier>{f886f9d3-4e0a-4928-95b9-d5a388305316}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Static Entities\Chest">
-      <UniqueIdentifier>{727a0490-44db-4f55-a82f-cf5b4da2ddc8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Static Entities\Consumable">
-      <UniqueIdentifier>{3f53adef-2a8f-40e6-b979-d2e85219a2ef}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities\Static Entities\ObjectStatc">
-      <UniqueIdentifier>{f5bf0063-e35f-4cd0-b913-8c5f0894b2f0}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="StaticEntity.h" />
+    <ClInclude Include="StaticObjectEntity.h" />
+    <ClInclude Include="Thrall.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="..\Game\config.xml" />
